[package]
name = "upgradable_contract_application"
version = "0.0.0"
authors = ["Daisuke Kanda <dai1975@gmail.com>"]
edition = "2021"
publish = false
description = ""
license = "CC0"
exclude = [
  "contract.wasm",
  "contract.wasm.gz",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[dependencies]
cosmwasm-std     = { git = "https://github.com/scrtlabs/cosmwasm", branch = "secret" }
cosmwasm-storage = { git = "https://github.com/scrtlabs/cosmwasm", branch = "secret" }
secret-toolkit   = { git = "https://github.com/scrtlabs/secret-toolkit", branch = "cosmwasm-v1.0", default-features = false, features = ["permit"] }

serde = { version = "^1.0.104", default-features = false, features = ["derive"] }
schemars = "0.8.1" #same to secret-toolkit's
thiserror = "1.0"

# rust-lld: error: duplicate symbol: instantiate
#upgradable_contract_storage = { path = "../storage" }

[dev-dependencies]
cosmwasm-schema = { git = "https://github.com/scrtlabs/cosmwasm", branch = "secret" }
assert_matches = "1.5"
serde_json = { version = "1.0.85" }
